name:                fling
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/sarahkittyy/fling#readme
license:             MIT
license-file:        LICENSE.md
author:              Sarah Ohlin
maintainer:          sarahohlin1@gmail.com
copyright:           MIT
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable fling
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
  other-modules:       Parser.Parser
                     , Opts.Grammar
                     , Opts.Parse
                     , Fling.Grammar
                     , Fling.Interpreter
                     , Fling.Repl
